# genai-packages

./: .gitignore  CLAUDE.md  LICENSE  README.md  article-ideas.md  run.sh
ai-skill-creator/articles/: encode-the-spec-twice.md
prompt-optimizer/: pyproject.toml
prompt-optimizer-8/: README.md  demo.sh
prompt-optimizer-8/app/: config.py  llm.py  pipeline.py  techniques.py
prompt-optimizer-8/app/static/: index.html
prompt-optimizer-8/articles/: prompt-optimizer-from-first-principles.md
prompt-optimizer-8/deploy/: .gcloudignore  Dockerfile
prompt-optimizer-8/tests/: conftest.py  test_pipeline.py  test_stream.py
prompt-optimizer/app/: main.py  models.py  pipeline.py  techniques.py
prompt-optimizer/app/static/: index.html
prompt-optimizer/articles/: prompt-optimizer-from-first-principles.md
prompt-optimizer/deploy/: cloudbuild.yaml  deploy.env  deploy.sh  requirements.txt
prompt-optimizer/tests/: conftest.py  test_api.py  test_chat.py  test_prompts.py
vertex-ai-429-optimizer/articles/: 429-optimizer-resilience-by-design.md
